<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TheRosterMobileApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">The Roster</string>
    <string-array name="eyeColor_array">

        <item>Black</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Purple</item>
    </string-array>
    <string name="name">Name</string>
    <string name="thinks_we_are_going_steady">Thinks We Are Going Steady</string>
    <string name="going_steady">Thinks We Are Going Steady</string>
    <string name="birthday">Birthday</string>
    <string name="save">Save</string>
    <string name="xs">XS</string>
    <string name="s">S</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="xl">XL</string>
    <string name="xxl">XXL</string>
    <string name="eyeColor">Eye Color</string>
    <string name="pantSize">Pant Size</string>
    <string name="shirtSize">Shirt Size</string>
    <string name="shoeSize">Shoe Size</string>
    <string name="textViewSaved">Data Saved</string>
</resources>
